responsive design fixes + horizontal overflow gefixt

--- a/Project/oman-biodiversity.com/web/css/main.css
+++ b/Project/oman-biodiversity.com/web/css/main.css
@@ -19,6 +19,7 @@ body, html {
     -webkit-font-smoothing: antialiased;
     width: 100%;
     min-width: 100%;
+    max-width: 100%;
 }
 a {
     outline: none;
@@ -35,8 +36,7 @@ a {
 .btn-material-yellow {
     background-color: #ffc107;
     color: #ffffff;
-    
-    margin-top: 6em;
+    margin-top: 12em;
 }
 /*--------------------------------------------------------*/
 /* -------------- header & navigation --------------*/
@@ -58,6 +58,7 @@ nav ul {
     top: 0;
     min-width: 100%;
     width: 100%;
+    max-width: 100%;
     z-index:1000;
     font-size: 1.1em;
     height: 4em;
@@ -77,29 +78,11 @@ nav ul li:hover a {
 }
 nav ul li a {
     display: block; 
-    padding: 24px 45px;
+    padding: 24px 20px;
     color: #212121; 
     font-size: 1.1em;
 }
-nav ul ul {
-    background: white; border-radius: 0px; padding: 0;
-    position: absolute; top: 100%;
-    width: 17em;
-    font-size: 2em;
-}
-nav ul ul li {
-    float: none; 
-    border-bottom: 1px solid #A00000;
-    position: relative;
-}
-nav ul ul li a {
-    padding: 13px 20px;
-    color: black;
-}   
-nav ul ul ul {
-    position: absolute; left: 100%; top:0;
-    width: 16em;
-}
+  
 .slicknav_menu {
 	display:none;
 }
@@ -219,7 +202,7 @@ nav ul ul ul {
 /*--------------------------------------------------------*/
 /* -------------- Media Queries -------------- */
 /*--------------------------------------------------------*/
-@media screen and (max-width: 465px) {
+@media screen and (max-width: 560px) {
 	/* #menu is the original menu */
 	 #menu {
 		display:none;
