--- a/Project/oman-biodiversity.com/web/css/slicknav.css
+++ b/Project/oman-biodiversity.com/web/css/slicknav.css
@@ -2,12 +2,12 @@
     Mobile Menu Core Style
 */
 
-.slicknav_btn { position: relative; display: block; vertical-align: middle; float: left; padding: 1em 0.625em 1em 0.625em; line-height: 1.125em; cursor: pointer; }
-.slicknav_menu  .slicknav_menutxt { display: block; line-height: 1.188em; float: left; }
-.slicknav_menu .slicknav_icon { float: left; margin: 0.188em 0 0 0.438em; color:#212121;}
-.slicknav_menu .slicknav_no-text { margin: 0 }
-.slicknav_menu .slicknav_icon-bar { display: block; width: 1.125em; height: 0.125em; -webkit-border-radius: 1px; -moz-border-radius: 1px; border-radius: 1px; -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); -moz-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); box-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
-.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar { margin-top: 0.188em }
+.slicknav_btn { position: relative; display: block; vertical-align: middle; float: left; padding: 1em 0.625em 1em 0.625em; line-height: 1.125em; cursor: pointer;  }
+.slicknav_menu  .slicknav_menutxt { display: block; line-height: 1.188em; float: left;  }
+.slicknav_menu .slicknav_icon { float: left; margin: 0.188em 0 0 0.438em; }
+.slicknav_menu .slicknav_no-text { margin: 0;  color: black;}
+.slicknav_menu .slicknav_icon-bar { background-color: #00bcd4; display: block; width: 1.3em; height: 0.25em;  -webkit-border-radius: 1px; -moz-border-radius: 1px; border-radius: 1px;}
+.slicknav_btn .slicknav_icon-bar + .slicknav_icon-bar {  margin-top: 0.2em; background-color: #00bcd4; }
 .slicknav_nav { clear: both }
 .slicknav_nav ul,
 .slicknav_nav li { display: block }
@@ -30,19 +30,16 @@
 
 
 /* Button Lines */
-.slicknav_menu .slicknav_icon-bar {
-  background-color: #ffffff;
-}
+
 .slicknav_menu {
     background:#ffffff;
     padding:5px;
     font-size: 1em;
 }
 .slicknav_btn{
-    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
     margin: 5px 5px 6px;
+    color: black;
 }
-
 .slicknav_nav {
     color:#212121;
     margin:0;
